test/error/ConstructorStaticClass.fu
public static class Test
{
	public Test() { //ERROR: Constructor in a static class
	}
}
